--- a/tools/ncbi_datasets/.shed.yml
+++ b/tools/ncbi_datasets/.shed.yml
@@ -3,8 +3,8 @@ categories:
 description: NCBI datasets downloads biological sequence data across all domains of life from NCBI.
 long_description: |
   NCBI Datasets is a new resource that lets you easily gather data from across NCBI databases. Find and download gene, transcript, protein and genome sequences, annotation and metadata.
-name: ncbi-datasets
+name: ncbi_datasets
 owner: iuc
 homepage_url: https://www.ncbi.nlm.nih.gov/datasets/
-remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/ncbi-datasets
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/ncbi_datasets
 type: unrestricted
