--- a/tools/genomic_super_signature/.shed.yml
+++ b/tools/genomic_super_signature/.shed.yml
@@ -4,7 +4,7 @@ categories:
 - Transcriptomics
 description: Interpretation of RNAseq experiments through robust, efficient comparison to public databases
 homepage_url: https://github.com/shbrief/GenomicSuperSignature
-long_description: ''
+long_description: 'Interpretation of RNAseq experiments through robust, efficient comparison to public databases'
 name: genomic_super_signature
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/genomic_super_signature
