Syntax fix for Wrapper YML

--- a/tools/ensembl_vep/.shed.yml
+++ b/tools/ensembl_vep/.shed.yml
@@ -1,7 +1,7 @@
 categories:
 - Genome annotation
 - Variant Analysis
-description: Ensembl VEP: Annotate VCFs with variant effect predictions
+description: "Ensembl VEP: Annotate VCFs with variant effect predictions"
 long_description: |
     The Ensembl Variant Effect Predictor (VEP) is able to determine the effect of 
     variants (e.g. SNPs, insertions or deletions) on genes, transcripts, protein 
