--- a/data_managers/data_manager_pangolin_data/tool_data_table_conf.xml.sample
+++ b/data_managers/data_manager_pangolin_data/tool_data_table_conf.xml.sample
@@ -9,4 +9,9 @@
         <columns>value, description, min_scorpio_version, path</columns>
         <file path="tool-data/pangolin_constellations.loc" />
     </table>    
+    <table name="pangolin_assignment" comment_char="#" allow_duplicate_entries="False">
+        <!-- min_pangolin_version is the minimum pangolin tool major version that is needed to read the pangolin_assignment data -->
+        <columns>value, description, min_pangolin_version, path</columns>
+        <file path="tool-data/pangolin_assignment.loc" />
+    </table>
 </tables>
