--- a/data_managers/data_manager_pangolin_data/.shed.yml
+++ b/data_managers/data_manager_pangolin_data/.shed.yml
@@ -1,9 +1,9 @@
 categories:
 - Data Managers
-description: Install pangolin_data databases for pangolin tool
+description: Install pangolin_data, constellations and pangolin_assignment databases for pangolin tool
 long_description: |
-  This data managers fetches models (from the cov-lineages/pangolin-data repository) for the pangolin
-  SARS-CoV-2 lineage typing tool and updates the pangolin_data data table.
+  This data managers fetches models (from the cov-lineages repository) for the pangolin
+  SARS-CoV-2 lineage typing tool and updates the pangolin_data, pangolin_constellations and pangolin_assignment data tables.
 name: data_manager_pangolin_data
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/data_managers/data_manager_pangolin_data
