--- a/tools/b2btools_single_sequence/.shed.yml
+++ b/tools/b2btools_single_sequence/.shed.yml
@@ -1,6 +1,6 @@
 # repository published to https://toolshed.g2.bx.psu.edu/repos/adrian.diaz/b2btools_single_sequence
 name: b2btools_single_sequence
-owner: adrian.diaz
+owner: iuc
 description: bio2Byte software suite to predict protein biophysical properties from their amino-acid sequences
 homepage_url: https://pypi.org/project/b2bTools/
 long_description: |
