Continue working on PR comments: suite shed file

--- a/tools/b2btools_single_sequence/.shed.yml
+++ b/tools/b2btools_single_sequence/.shed.yml
@@ -1,14 +1,21 @@
-# repository published to https://toolshed.g2.bx.psu.edu/repos/adrian.diaz/b2btools_single_sequence
-name: b2btools_single_sequence
 owner: iuc
-description: bio2Byte software suite to predict protein biophysical properties from their amino-acid sequences
-homepage_url: https://pypi.org/project/b2bTools/
 long_description: |
-    This package provides you structural predictions for protein sequences made by Bio2Byte group.
+    This software suite provides structural predictions for protein sequences made by Bio2Byte group.
+    About Bio2Byte: We investigate how the dynamics, conformational states, and available experimental data of proteins relate to their amino acid sequence.
+    Underlying physical and chemical principles are computationally unraveled through data integration, analysis, and machine learning, so connecting them
+    to biological events and improving our understanding of the way proteins work.
+homepage_url: https://bio2byte.be
 type: unrestricted
 categories:
-- Computational chemistry
-- Molecular Dynamics
-- Proteomics
-- Sequence Analysis
-- Synthetic Biology
+    - Computational chemistry
+    - Molecular Dynamics
+    - Proteomics
+    - Sequence Analysis
+    - Synthetic Biology
+auto_tool_repositories:
+    name_template: "{{ tool_id }}"
+    description_template: "Galaxy wrapper for Bio2Byte tool {{ tool_name }}."
+suite:
+    name: suite_b2btools
+    description: Software suite provided by the research group Bio2Byte to predict protein biophysical properties.
+    type: repository_suite_definition
